// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CallAvatar should match snapshot muted 1`] = `
<View
  style={
    Array [
      Object {
        "borderRadius": 20,
        "height": 40,
        "marginBottom": 5,
        "width": 40,
      },
      Object {
        "shadowColor": "rgb(61, 184, 135)",
        "shadowOffset": Object {
          "height": 0,
          "width": 0,
        },
        "shadowOpacity": 1,
        "shadowRadius": 10,
      },
    ]
  }
>
  <Connect(ProfilePicture)
    showStatus={false}
    size={40}
    userId="user-id"
  />
  <CompassIcon
    name="microphone-off"
    size={12}
    style={
      Object {
        "backgroundColor": "black",
        "borderColor": "black",
        "borderRadius": 10,
        "borderWidth": 2,
        "bottom": -5,
        "color": "white",
        "height": 20,
        "overflow": "hidden",
        "padding": 2,
        "position": "absolute",
        "right": -5,
        "textAlign": "center",
        "textAlignVertical": "center",
        "width": 20,
      }
    }
  />
</View>
`;

exports[`CallAvatar should match snapshot size large 1`] = `
<View
  style={
    Array [
      Object {
        "borderRadius": 36,
        "height": 72,
        "marginBottom": 5,
        "width": 72,
      },
      Object {
        "shadowColor": "rgb(61, 184, 135)",
        "shadowOffset": Object {
          "height": 0,
          "width": 0,
        },
        "shadowOpacity": 1,
        "shadowRadius": 10,
      },
    ]
  }
>
  <Connect(ProfilePicture)
    showStatus={false}
    size={72}
    userId="user-id"
  />
  <CompassIcon
    name="microphone"
    size={16}
    style={
      Object {
        "backgroundColor": "#3DB887",
        "borderColor": "black",
        "borderRadius": 12,
        "borderWidth": 2,
        "bottom": -5,
        "color": "white",
        "height": 24,
        "overflow": "hidden",
        "padding": 2,
        "position": "absolute",
        "right": -5,
        "textAlign": "center",
        "textAlignVertical": "center",
        "width": 24,
      }
    }
  />
</View>
`;

exports[`CallAvatar should match snapshot unmuted 1`] = `
<View
  style={
    Array [
      Object {
        "borderRadius": 20,
        "height": 40,
        "marginBottom": 5,
        "width": 40,
      },
      Object {
        "shadowColor": "rgb(61, 184, 135)",
        "shadowOffset": Object {
          "height": 0,
          "width": 0,
        },
        "shadowOpacity": 1,
        "shadowRadius": 10,
      },
    ]
  }
>
  <Connect(ProfilePicture)
    showStatus={false}
    size={40}
    userId="user-id"
  />
  <CompassIcon
    name="microphone"
    size={12}
    style={
      Object {
        "backgroundColor": "#3DB887",
        "borderColor": "black",
        "borderRadius": 10,
        "borderWidth": 2,
        "bottom": -5,
        "color": "white",
        "height": 20,
        "overflow": "hidden",
        "padding": 2,
        "position": "absolute",
        "right": -5,
        "textAlign": "center",
        "textAlignVertical": "center",
        "width": 20,
      }
    }
  />
</View>
`;
